--- a/mobileDev/第01期—Swift编程权威指南（第2版）/01答疑准备/20170909第1次答疑准备.md
+++ b/mobileDev/第01期—Swift编程权威指南（第2版）/01答疑准备/20170909第1次答疑准备.md
@@ -1,6 +1,11 @@
-# 《Swift编程权威指南（第2版）》20170909第1次答疑预备问题
+# 《Swift编程权威指南（第2版）》第1次答疑预备问题
+
+|日期|时间|章节|
+|---|---|---|
+|20170909|20:00~22:00|1~7章|
 ## 1.关于if-else语句,都有哪几种使用形式?
 ## 2.Swift中的==和===的等更深理解
 ## 3.溢出操作符(`&+`,`&-`,`&*`)的理解,有没有`&/`,`&%`除法和取余的溢出操作符?
 ## 4.为什么要有`fallthrough`?
 ## 5.`continue`与`break`的区别?
+## 6.字符串是否可以通过下标形式获取单个字符,如果不可以,是否有其他方式可以实现?
